--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,8 @@
 <ul>
   <li><%= link_to "Поставщики", suppliers_path %></li>
   <li><%= link_to "Поставки", supplies_path %></li>
+  <li><%= link_to "Товары", shipments_path  %></li>
+  <li><%= link_to "Склад", stores_path %></li>
 </ul>
 <%= yield %>
 
