--- a/app/views/supplies/index.html.erb
+++ b/app/views/supplies/index.html.erb
@@ -5,6 +5,7 @@
   <thead>
     <th>Название товара</th>
     <th>Поставщик</th>
+    <th>Склад</th>
     <th>Дата поставки</th>
     <th>Количество</th>
     <th></th>
@@ -15,6 +16,7 @@
       <tr>
         <td><%= supply.shipment.title unless supply.shipment.nil? %></td>
         <td><%= supply.supplier.title unless supply.supplier.nil? %></td>
+        <td><%= supply.store.title %></td>
         <td><%= supply.updated_at %></td>
         <td><%= supply.count %></td>
         <td><%= link_to "Изменить", edit_supply_path(supply.id) %></td>
