--- a/app/views/stores/_form.html.erb
+++ b/app/views/stores/_form.html.erb
@@ -1,3 +1,6 @@
 <%= simple_form_for @store do |f| %>
-  <%= f.input :shipment_id, as: :select, collection: Shipment.all.sort %>
+  <%= f.input :title %>
+  <%= f.input :phone %>
+  <%= f.input :address %>
+  <%= f.submit "Добавить" %>
 <% end %>
