finish employees table

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
   <li><%= link_to "Поставки", supplies_path %></li>
   <li><%= link_to "Товары", shipments_path  %></li>
   <li><%= link_to "Склад", stores_path %></li>
+  <li><%= link_to "Сотрудники", employees_path %></li>
 </ul>
 <%= yield %>
 
