--- a/app/views/supplies/_form.html.erb
+++ b/app/views/supplies/_form.html.erb
@@ -2,6 +2,7 @@
   <%= f.input :shipment_id, as: :select, collection: Shipment.all.sort %>
   <%= f.input :supplier_id, as: :select, collection: Supplier.all.sort %>
   <%= f.input :store_id, as: :select, collection: Store.all.sort %>
+  <%= f.input :employee_id, as: :select, collection: Employee.all.sort %>
   <%= f.input :count %>
   <%= f.submit "Добавить" %>
 <% end %>
