posts and positions

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,8 @@
   <li><%= link_to "Товары", shipments_path  %></li>
   <li><%= link_to "Склад", stores_path %></li>
   <li><%= link_to "Сотрудники", employees_path %></li>
+  <li><%= link_to "Должности", posts_path %></li>
+  <li><%= link_to "Занимаемые должности", positions_path %></li>
 </ul>
 <%= yield %>
 
